--- a/src/app/components/tours/Tours.css
+++ b/src/app/components/tours/Tours.css
@@ -1,19 +1,23 @@
 .flicking-pagination {
+  bottom: 0;
   display: flex;
-  justify-content: center;
-  margin-top: 20px;
+  justify-content: start;
+  margin-left: 24px;
 }
 
 .flicking-pagination-bullet {
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  background-color: #ccc;
-  margin: 0 5px;
+  width: 9;
+  height: 9px;
+  border-radius: 3px;
+  background-color: rgba(0, 0, 0, 0.2);
   cursor: pointer;
-  transition: background-color 0.3s ease;
+  transition: width 0.3s ease;
 }
 
 .flicking-pagination-bullet-active {
-  background-color: #333;
+  width: 36px;
+  height: 9px;
+  border-radius: 3px;
+  background: var(--accent-color);
+  transition: width 0.3s ease;
 }
